--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
   "name": "bootstrap-markdown",
   "main": "js/bootstrap-markdown.js",
-  "version": "2.10.0",
+  "version": "3.0.0",
   "description": "A bootstrap plugin for markdown editing",
-  "license" : "Apache-2.0",
-  "homepage": "https://github.com/toopay/bootstrap-markdown",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/yads/bootstrap-markdown",
   "keywords": [
     "twitter",
     "bootstrap",
     "markdown",
     "editor"
   ],
-  "maintainers": [{
-    "name": "Taufan Aditya",
-    "web": "https://github.com/toopay"
-  }],
+  "maintainers": [
+    {
+      "name": "Vadim Kazakov",
+      "web": "https://github.com/yads"
+    }
+  ],
+  "scripts": {
+    "build": "npm-run-all 'build:*'",
+    "build:js": "terser --source-map base js/bootstrap-markdown.js -o js/bootstrap-markdown.min.js",
+    "build:css": "sass --no-source-map scss/bootstrap-markdown.scss css/bootstrap-markdown.css",
+    "build:css_min": "sass --style=compressed scss/bootstrap-markdown.scss css/bootstrap-markdown.min.css"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/toopay/bootstrap-markdown.git"
+    "url": "https://github.com/yads/bootstrap-markdown.git"
+  },
+  "peerDependencies": {
+    "bootstrap": "^4.6.0"
+  },
+  "devDependencies": {
+    "bootstrap": "^4.6.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.32.8",
+    "terser": "^5.6.1"
   }
 }
